Dodano plik w którym wyświetlać się będzie zapisany czas.

--- a/Zegar/Zegar/Zegar.csproj
+++ b/Zegar/Zegar/Zegar.csproj
@@ -29,5 +29,8 @@
     <EmbeddedResource Update="Widoki\StronaZegar.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Widoki\ZapisanyCzas.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
